# project-chimera

./: .coverage  .dockerignore  .env.dgx-spark.example  .env.docker  .env.example  .env.nemotron  .env.production.example  .gitignore  .task_1_2_registries_config.yaml  8_WEEK_PLAN_APRIL_JUNE_2026.md  AGENTS.md  AUTOMATION_SUITE_COMPLETE_GUIDE.md  AUTONOMOUS-OVERNIGHT-STATUS.md  Backlog_Project_Chimera.md  CHANGELOG.md  CODEX_COMPLETION_REPORT.md  CODE_OF_CONDUCT.md  COMMIT_EDITMSG  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEVELOPMENT.md  E2E-FIXES-2026-03-09.md  E2E-TESTING-PROGRESS.md  EDUCATIONAL-PLATFORM-COMPLETION-REPORT.md  EIGHT_WEEK_PLAN_STATUS.md  EXECUTION_GUIDE_FINAL_STEPS.md  FACTUAL_CORRECTION.md  FINAL_EXECUTION_SUMMARY.md  FINAL_GRANT_SUBMISSION_STATUS.md  FINAL_IMPLEMENTATION_REPORT_April_9.md  FINAL_STATUS_REPORT_April_9_2026.md  GETTING_STARTED.md  GRANT_EXTENSION_PROPOSAL.md  HEAD  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_April_9.md  LICENSE  LIVE_SHOW_AUTOMATION_SUMMARY.md  LOCAL_VALIDATION_REPORT.md  (+57 more)
platform/: .coverage  DEPLOYMENT.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
platform/ci_gateway/: github.py  main.py
platform/cicd-gateway/: pyproject.toml
platform/cicd-gateway/docs/: architecture.md
platform/cicd-gateway/gateway/: __init__.py  broadcast.py  sync.py  trigger.py  webhook.py
platform/cicd-gateway/tests/: test_broadcast.py  test_sync.py  test_trigger.py  test_webhook.py
platform/dashboard/: graphql.py  main.py  pyproject.toml  routes.py
platform/dashboard/components/: __init__.py  alerts.py  cicd.py  coverage.py  health.py  responsive.py  results.py
platform/dashboard/docs/: layout.md
platform/dashboard/frontend/: package-lock.json  package.json
platform/dashboard/tests/: test_alerts.py  test_cicd.py  test_coverage.py  test_health.py  test_responsive.py  test_results.py
platform/database/: schema.sql
platform/deployment/docs/: architecture.md  deployment-guide.md  runbooks.md
platform/monitoring/config/: alert-rules-critical.yaml  alertmanager.yaml  loki-config.yaml  prometheus-rules.yaml  prometheus-scrape.yaml  promtail-config.yaml  slo-alerting-rules.yaml  slo-recording-rules.yaml  trace-analysis-rules.yaml
platform/monitoring/docs/: architecture.md
platform/monitoring/telemetry/: __init__.py
platform/monitoring/tests/: test_alert_rules.py  test_anomaly_detection_rules.py
platform/monitoring/trace-analyzer/: __init__.py  analyzer.py
platform/orchestrator/: __init__.py  discovery.py  executor.py  main.py  models.py  pyproject.toml  routes.py  scheduler.py
platform/orchestrator/api/: __init__.py  routes.py  websocket.py
platform/orchestrator/core/: __init__.py  aggregator.py  coverage.py  discovery.py  executor.py
platform/orchestrator/docs/: architecture.md
platform/orchestrator/storage/: __init__.py  history.py
platform/orchestrator/tests/: __init__.py  test_aggregator.py  test_api.py  test_coverage.py  test_discovery.py  test_executor.py  test_history.py  test_websocket.py
platform/perf-optimizer/: performance.py  pyproject.toml
platform/perf-optimizer/performance/: __init__.py
platform/perf-optimizer/tests/: test_performance.py
platform/quality-gate/: evaluate.sh  pyproject.toml  run_evaluation.py
platform/quality-gate/docs/: criteria.md
platform/quality-gate/gate/: __init__.py  anti_gaming_evaluator.py  quality.py  slo_gate.py
platform/quality-gate/tests/: test_quality.py  test_slo_gate.py
platform/security/docs/: hardening.md
platform/shared/: __init__.py  config.py  database.py  models.py
platform/testengines/: __init__.py  locust.py  mutmut.py
platform/tests/integration/: test_dashboard_api.py  test_github_webhook.py  test_orchestrator_api.py
platform/tests/unit/: conftest.py  test_config.py  test_database.py  test_discovery.py  test_executor.py  test_github.py  test_models.py  test_scheduler.py  test_testengines.py
services/music-orchestration/: DEPRECATED.md  Dockerfile  README.md  pyproject.toml
services/music-orchestration/chimera_music_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/music-orchestration/docs/: API.md  DEPLOYMENT.md
services/music-orchestration/manifests/: k8s.yaml  network-policy.yaml
services/music-orchestration/migrations/: 001_create_music_tables.sql
services/music-orchestration/music_orchestration/: __init__.py  approval.py  auth.py  cache.py  database.py  errors.py  main.py  models.py  router.py  schemas.py  storage.py  websocket.py
services/music-orchestration/tests/: __init__.py
services/music-orchestration/venv_test/: pyvenv.cfg
services/openclaw-orchestrator/: .env.example  Dockerfile  README.md  config.py  conftest.py  main.py  metrics.py  models.py  pyproject.toml  requirements.txt  show_manager.py  tracing.py
services/openclaw-orchestrator/bots/: opinion_reporter.py
services/openclaw-orchestrator/core/: multi_scene.py  recovery.py  scene_manager.py
services/openclaw-orchestrator/manifests/: k8s.yaml
services/openclaw-orchestrator/persistence/: __init__.py  scene_store.py
services/openclaw-orchestrator/src/: __init__.py  config.py  main.py
services/openclaw-orchestrator/tests/: conftest.py  test_config.py  test_main.py  test_multi_scene.py  test_openclaw_policy_engine.py  test_recovery.py  test_routes.py  test_scene_manager.py  test_scene_store.py  test_scene_validator.py  test_skill_registry.py
services/openclaw-orchestrator/transitions/: __init__.py  agent_handoff.py  audience_context.py  event_triggers.py  manual_triggers.py  time_triggers.py  transition_effects.py  undo_redo.py
services/openclaw-orchestrator/validation/: __init__.py  scene_validator.py
services/scenespeak-agent/: .env.example  Dockerfile  README.md  config.py  glm_client.py  local_llm.py  lora_adapter.py  main.py  metrics.py  models.py  models.txt  openai_llm.py  pyproject.toml  requirements.txt  tracing.py
services/simulation-engine/: Dockerfile  __init__.py  config.py  docker-compose.yml  k8s-deployment.yaml  main.py  pyproject.toml  requirements.txt
(+1891 files in other folders)
