[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenespeak-agent"
version = "0.1.0"
description = "Real-time dialogue generation using local LLMs"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.0",
]
